# nexus-a2a-protocol

./: .agent_pids.json  .env.example  .env.helixcare.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile.integration  HELIXCARE_USER_MANUAL.md  LICENSE-MIT-original  NEXT_STEPS.md  README-original.md  README-v2.md  README.md  REGRESSION_TEST_REPORT.md  _editable.txt  _editable2.txt  _editable3.txt  _env_check.txt  _fulltest.txt  _pip_list.txt  _pip_ver.txt  _pytest_ver.txt  azure.yaml  docker-compose-helixcare.yml  docker-compose-mssql-test.yml  docker_log.txt  harness_output.txt  harness_results.txt  harness_results.xml  helixcare_full_results.txt  helixcare_results.json  helixcare_validation.json  hitl_tasks.db  mcp_review_summary.md  mcp_scenario_results.json  package-lock.json  package.json  playwright.config.js  pr_body.md  pr_health_thresholds.md  (+10 more)
.azure/: plan.md
.claude/: launch.json  settings.json  settings.local.json
HelixCare/: Authentication and Identity in Autonomous Agent Systems.docx  Authentication in NEXUS-A2A Agent Networks.docx  Autonomous Multi‑Agent Systems in the Digital Hospital.docx  HelixCare AI Hospital – Comprehensive Design Specification.docx  HelixCare AI Hospital – Implementation Plan.docx  HelixCare AI Hospital – Requirements Specification.docx  Patient Visit Scenarios in Healthcare_ Workflow, EHR Touchpoints, Time, Billing, and Safety.docx  Patient Visit Scenarios in Healthcare_ Workflow, EHR Touchpoints, Time, Billing, and Safety.md  audit_agent_unit_matrix.json  bed_manager_agent_unit_matrix.json  care_coordinator_unit_matrix.json  ccm_agent_unit_matrix.json  consent_verification_unit_matrix.json  coverage_analysis.json  ed_diagnosis_agent_unit_matrix.json  ed_triage_agent_unit_matrix.json  fhir_profile_agent_unit_matrix.json  followup_scheduler_unit_matrix.json  helixcare_admission_treatment_matrix.json  helixcare_avatar_streaming_matrix.json  helixcare_compliance_report.md  helixcare_diagnosis_imaging_matrix.json  helixcare_discharge_matrix.json  helixcare_ed_intake_triage_matrix.json  helixcare_gharra_route_admission_matrix.json  helixcare_iam_non_encounter_matrix.json  helixcare_persona_iam_matrix.json  helixcare_protocol_discovery_matrix.json  helixcare_protocol_security_matrix.json  helixcare_public_health_surveillance_matrix.json  helixcare_rbac_matrix.json  helixcare_traceability_report.md  home_visit_agent_unit_matrix.json  imaging_agent_unit_matrix.json  ncpdp_gateway_agent_unit_matrix.json  pharmacy_agent_unit_matrix.json  primary_care_agent_unit_matrix.json  profile_registry_agent_unit_matrix.json  public_health_surveillance_unit_matrix.json  specialty_care_agent_unit_matrix.json  (+3 more)
IAM/: 3 step.txt  Enterprise policy layer for patient-level constraints in a NEXUS-A2A multi-agent healthcare system.md
aligned repos/: deep-research-report.md
shared/clinical_pathways/: .gitignore  __init__.py  agent_cards.py  loader.py  models.py  pyproject.toml  repository.py  run_tests.py  use_cases.json
shared/clinical_pathways/api/: __init__.py  main.py
shared/clinical_pathways/api/routes/: health.py  pathways.py  personalise.py
shared/clinical_pathways/context/: __init__.py  assembler.py  consent.py  models.py  redactor.py
shared/clinical_pathways/engine/: __init__.py  audit.py  deviation.py  models.py  personaliser.py  rules.py  safety.py
shared/clinical_pathways/integration/: __init__.py  adapters.py
shared/clinical_pathways/integration/versions/v1/: orchestrator.py
shared/clinical_pathways/tests/: conftest.py  generate_integration_scenarios.py  generate_scenarios.py  generate_use_case_scenarios.py  run_all_tests.py  test_agent_cards.py  test_api.py  test_context.py  test_integration_scenarios.py  test_models.py  test_personaliser.py  test_repository.py  test_rules.py  test_safety.py  test_scenarios.py
shared/clinical_pathways/tests/scenarios/: scenarios_diabetes_sepsis.json  scenarios_heart_failure_copd.json  scenarios_integration.json  scenarios_maternal_cross_pathway.json  scenarios_use_cases.json
shared/clinical_pathways/uk/nice/: copd.json  diabetes_type2.json  heart_failure.json  sepsis.json
shared/clinical_pathways/who/: maternal_health.json
(+701 files in other folders)
