[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-a2a-protocol"
version = "0.1.0"
description = "Python SDK and PoC implementation for the Nexus A2A protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.2",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "fastapi>=0.115.0",
]

# Optional security extras for OIDC RS256 token verification
security = [
  "PyJWT[crypto]>=2.8.0",
  "httpx>=0.27.2"
]

# MCP server extras
mcp = [
  "mcp[cli]>=1.0.0",
  "httpx>=0.27.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    # Legacy shim tests intentionally exercise the deprecated mcp_adapter module.
    "ignore:shared.nexus_common.mcp_adapter is deprecated:DeprecationWarning",
    # FastAPI on_event is deprecated — suppress residual warnings from third-party
    # or agent code not yet migrated to lifespan.
    "ignore:on_event is deprecated:DeprecationWarning",
    # datetime.utcnow() Python 3.12 nudge — fixed in first-party code, suppress
    # any remaining occurrences in third-party dependencies.
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
